--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/images/graven.jpg" />
+    <link rel="icon" type="image/jpg" href="/images/assistant.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="GravenGPT is an AI language model app that cannot generate human-like text.">
     <meta name="keywords" content="GravenGPT">
